# telegram-contact-sync

./: .gitignore  README.md  pyproject.toml
src/telegram_contact_sync/: __init__.py
